# job-agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  activate_project.sh  pyproject.toml
.github/workflows/: cicd.yaml
job_agent/job_scraper/: main.py
job_agent/linkedin/: chrome.py  job_applier.py  job_search.py  job_validator.py  jobs.py  main.py  model.py  objects.py  orchestrator.py  setup.py  sheet_manager.py  util.py
job_agent/linkedin/drivers/: chrome.py
