[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "0.1.0"
authors = [
    {name = "Birehan Zewdie", email = "birehananteneh4@gmail.com"},
]
description = "Job Application Automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "openai",
    "selenium",
    "selenium-stealth",
    "beautifulsoup4",
    "gspread",
    "oauth2client",
    "webdriver-manager",
    "PyPDF2",
    "pandas",
    "google-api-python-client",
    "pypdf"
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "pre-commit>=4.0.1",
    "pyright>=1.1.397",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "httpx>=0.28.0",
]


[project.urls]
Homepage = "https://github.com/birehan/job-agent" 
Repository = "https://github.com/birehan/job-agent"

[tool.setuptools.packages.find]
include = ["job_agent*"]
exclude = ["data*", "tests*"]